<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <TextView
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:textColor="@color/purple_500"
        android:text="@string/secure_login"
        android:textStyle="bold"
        android:textSize="48sp" />

    <TextView
        android:layout_marginStart="20dp"
        android:textAlignment="textStart"
        android:id="@+id/textView"
        android:textColor="@color/black"
        android:layout_width="356dp"
        android:layout_height="72dp"
        android:text="@string/app_description"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_marginTop="50dp"
        android:layout_width="300dp"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username" />

        <EditText
            android:id="@+id/editTextTextPersonName"
            android:layout_width="373dp"
            android:layout_height="45dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/name" />
        <TextView
            android:layout_marginTop="30dp"
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password" />

        <EditText
            android:id="@+id/editTextTextPassword"
            android:layout_width="375dp"
            android:layout_height="45dp"
            android:ems="10"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="36dp"
            android:text="@string/log_in" />

        <TextView
            android:layout_marginTop="40dp"
            android:textColor="@color/purple_500"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register" />
    </LinearLayout>








</LinearLayout>